##Text encoding: utf-8

2010-10-20  Jean Bréfort  <jean.brefort@normalesup.org>
	* openbabel/babelserv.cc: start the server.
	* tests/Makefile.am: new test program.
	* tests/testbabelserver.c (main): ditto.

2010-10-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/object.cc: fixed crash in Object::Clear(). (Fredora #637564)

2010-10-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/Makefile.am: add new files.
	* libs/gcp/application.cc:  new gcp::Brackets class.
	* libs/gcp/brackets.cc: ditto.
	* libs/gcp/brackets.h: ditto.
	* libs/gcp/window.cc: enhanced recents file code.
	* libs/gcr/cleavagesdlg.cc: changed the grid creation signature.
	* libs/gcr/grid.cc: ditto.
	* libs/gcr/grid.h: ditto.
	* libs/gcu/application.cc: set dir after loading a file.
	* libs/gcu/spectrumdoc.cc: fixed FID transform.
	* plugins/loaders/nuts/nuts.cc: set some more properties.
	* programs/spectra/application.cc: enhanced recents file code.
	* programs/spectra/application.h: ditto.
	* programs/spectra/window.cc: ditto.

2010-10-03  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/spectrumdoc.cc: make fourier transform really work.

2010-09-29  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/bond.cc: allays update cycles when loaded.
	* libs/gcu/spectrumdoc.cc: some work on FID transform using fft.
	* libs/gcu/spectrumdoc.h: ditto.

2010-09-28  Jean Bréfort  <jean.brefort@normalesup.org>
	* database/elecprops.xml.in: added elements 117 and 118.
	* database/elements.xml.in: ditto.
	* libs/gcu/element.cc: don't crash if no electronegativity is known.
	* programs/table/gchemtable-elt.cc: don't crash if weight is unknown.
	* ui/libgcu/gcuperiodic.ui: added elements 117 and 118.

2010-09-26  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/objprops.h: add more spectrum related properties.
	* libs/gcu/spectrumdoc.cc: ditto.
	* plugins/loaders/nuts/nuts.cc: imports the time related data.

2010-09-25  Jean Bréfort  <jean.brefort@normalesup.org>